--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,14 @@
             "email": "iyardsev@gmail.com"
         }
     ],
+    "autoload": {
+        "psr-4": {
+            "App\\": "src/"
+        },
+        "files": [
+            "index.php"
+        ]
+    },
     "require": {
         "guzzlehttp/guzzle": "~6.0"
     }
