--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         }
     },
     "require": {
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "spatie/array-to-xml": "^2.11"
     }
 }
